# sugar

./: .gitignore  CNAME  Cargo.toml  README.md  autodoc.config.json  civic.env  config.json.civic-ignite  config.json.civic-test-ignite
.autodoc/docs/data/: hnswlib.index
.autodoc/docs/markdown/script/: sugar-install.md  summary.md
.autodoc/docs/markdown/src/: cache.md  candy_machine.md  common.md  constants.md  errors.md  lib.md  main.md  parse.md  pdas.md  program_errors.md  setup.md  utils.md
.autodoc/docs/markdown/src/airdrop/: errors.md  mod.md  process.md  structs.md  (+2 more)
.github/: build.yml
.github/workflows/: build.yml  ci.yml  quickstart.yml
script/: .gitignore  generate_test_mint_pngs.sh  sugar-cli-test.sh  sugar-install.sh
src/: cache.rs  candy_machine.rs  common.rs  constants.rs  errors.rs  lib.rs  main.rs  parse.rs  pdas.rs  setup.rs  utils.rs
src/airdrop/: process.rs  utils.rs
src/bundlr/: process.rs
src/cli/: mod.rs
src/collections/: process.rs  remove.rs  set.rs
src/config/: data.rs  errors.rs  guard_data.rs  mod.rs  parser.rs
src/create_config/: process.rs
src/deploy/: collection.rs  config_lines.rs  initialize.rs  process.rs
src/freeze/: disable.rs  enable.rs  initialize.rs  mod.rs  remove.rs  set.rs  thaw.rs  unfreeze_funds.rs  unlock.rs  unlock_funds.rs
src/guard/: add.rs  remove.rs  show.rs  update.rs  withdraw.rs
src/hash/: process.rs
src/interactive/: process.rs
src/launch/: process.rs
src/mint/: airdrop_utils.rs  mod.rs  process.rs
src/mint/airdrop/: errors.rs  mod.rs  structs.rs  utils.rs
src/reveal/: process.rs
src/show/: process.rs
src/sign/: errors.rs  mod.rs  process.rs
src/update/: mod.rs  process.rs  set_token_standard.rs
src/upload/: assets.rs  aws.rs  bundlr.rs  errors.rs  mod.rs  nft_storage.rs  process.rs  storage.rs  uploader.rs
src/upload/methods/: aws.rs  bundlr.rs  cascade.rs  mod.rs  nft_storage.rs  pinata.rs  sdrive.rs  sense.rs  shdw.rs
src/upload_assets/: assets.rs  bundlr.rs  process.rs
src/validate/: errors.rs  format.rs  parser.rs  process.rs
src/verify/: process.rs
src/withdraw/: mod.rs  process.rs
tests/: helpers.rs  sugar-airdrop-test.sh  sugar-mint-test.sh
(+87 files in other folders)
