[package]
description = "Command line tool for creating and managing Metaplex Candy Machines."
documentation = "https://developers.metaplex.com/candy-machine/sugar"
edition = "2021"
license = "Apache-2.0"
name = "sugar-cli"
repository = "https://github.com/metaplex-foundation/sugar"
version = "2.7.1"

[[bin]]
name = "sugar"
path = "src/main.rs"

[dependencies]
anchor-client = "0.28.0"
anchor-lang = "0.28.0"
anyhow = "1.0.58"
async-trait = "0.1.57"
borsh = "0.9.3"
bs58 = "0.4.0"
bundlr-sdk = { version = "0.3.0", default-features = false, features = [
  "solana",
] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
clap = { version = "3.2.8", features = ["cargo", "derive"] }
console = "0.15.0"
ctrlc = "3.2.2"
data-encoding = "2.3.2"
dateparser = "0.1.6"
dialoguer = "0.10.1"
dirs = "4.0.0"
futures = "0.3.21"
glob = "0.3.0"
hex = "0.4.3"
indexmap = { version = "1.9.1", features = ["serde"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
ini = "1.3.0"
lazy_static = "1.5.0"
mpl-core = "0.8.0-beta.1"
mpl-core-candy-guard = "0.2.1"
mpl-core-candy-machine-core = "0.2.1"
num_cpus = "1.13.1"
phf = { version = "0.10", features = ["macros"] }
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.5.6"
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
retry = "1.3.0"
ring = "0.16.20"
rust-s3 = "0.31.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_with = "3.0.0"
serde_yaml = "0.8.24"
sha2 = "0.10.2"
shellexpand = "2.1.0"
solana-account-decoder = "1.16.27"
solana-client = "1.16.27"
solana-logger = "1.16.27"
solana-program = "1.16.27"
solana-transaction-status = "1.16.27"
spl-associated-token-account = "1.1.1"
spl-token = "3.3.1"
tabled = "0.12.1"
thiserror = "1.0.31"
tokio = "1.14.1"
tracing = { version = "0.1.35", features = ["log"] }
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.14", features = [
  "env-filter",
  "registry",
] }
url = "2.2.2"

[dev-dependencies.cargo-husky]
default-features = false
features = ["precommit-hook", "user-hooks"]
version = "1"
